# Helpdesk

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  pyrightconfig.json  user_simulator.py
data/: knowledge_base.json
data/tickets/: easy.json  hard.json  medium.json
graders/: category_grader.py  faq_grader.py  resolution_grader.py  score_utils.py
helpdesk_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: app.py  helpdesk_environment.py
