[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helpdesk-env"
version = "1.0.0"
description = "OpenEnv-style UPI banking support environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "openai",
  "pydantic",
  "requests",
  "uvicorn",
]

[tool.setuptools]
packages = ["helpdesk_env"]

[tool.setuptools.package-dir]
helpdesk_env = "."

[tool.setuptools.package-data]
helpdesk_env = [
  "data/*.json",
  "data/tickets/*.json",
]
